--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "react-bootstrap": "^2.7.2"
   }
 }
