--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fortawesome": "0.0.1-security",
+    "google-auth-library": "^8.7.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "openai": "^3.2.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react-bootstrap": "^2.7.2",
     "reactstrap": "^9.1.6"
   }
