--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fortawesome": "0.0.1-security",
     "openai": "^3.2.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "react-bootstrap": "^2.7.2",
     "reactstrap": "^9.1.6"
   }
