--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "fortawesome": "0.0.1-security",
     "openai": "^3.2.1",
     "react-bootstrap": "^2.7.2",
-    "reactstrap": "^9.1.6"
+    "react-resizable": "^3.0.5",
+    "reactstrap": "^9.1.6",
+    "resizable": "^1.2.1"
   }
 }
